--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,8 @@
 {
-	"trailingComma": "es5",
-	"useTabs": true,
+	"singleQuote": true,
 	"semi": true,
-	"singleQuote": true
+	"useTabs": true,
+	"tabWidth": 4,
+	"trailingComma": "all",
+	"printWidth": 80
 }
